# sim-1

./: .gitignore  .gitmodules  CMakeLists.txt  HANDOFF.md  pyproject.toml  readme.md  requirements.txt
csrc/: CMakeLists.txt  README.md  engine_py.cpp
csrc/obs/: obs.h
csrc/viz/: CMakeLists.txt  main.cpp  motion_clip.h  policy_net.h  viz_sim.h
include/: application.h
include/systems/: render_system.h
sim1/: __init__.py  config.py  eval.py  export_diff_trajectory.py  export_motion.py  export_policy.py  train.py
sim1/algos/: __init__.py  ppo.py
sim1/envs/: __init__.py  engine_vecenv.py  mock_vecenv.py  running_norm.py  task_env.py  vecenv.py
sim1/models/: __init__.py  discriminator.py  mlp.py
sim1/motion/: __init__.py  motion_lib.py  reference.py
sim1/tasks/: __init__.py  base.py  command.py  composite.py  getup.py  proprio.py  reach.py  rewards.py  stand.py  track.py  track_rewards.py  walk.py
sim1/utils/: __init__.py  checkpoint.py  logging.py  run_dir.py  seeding.py
src/: application.cpp  main.cpp
src/components/: component.cpp
src/entities/: entity.cpp
src/systems/: render_system.cpp  system.cpp
tests/: test_amp.py  test_articulation_state.py  test_backend_fidelity.py  test_checkpoint.py  test_composable.py  test_diff_backend.py  test_diffenv_spike.py  test_engine_obs_parity.py  test_exploration.py  test_export_config.py  test_mock.py  test_motion_lib.py  test_ppo_learns.py  test_reward_norm.py  test_run_infra_fixes.py  test_track_rewards.py  test_tracking.py
